--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1467,7 +1467,7 @@ th {
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #e4fffe;
 }
 table col[class*="col-"] {
   position: static;
