--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ hr {
 
 .home-section {
     padding-top: 50px;
+    padding-bottom: 110px;
 	display:block;
     position:relative;
     z-index:120;
