--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ hr {
 .contactoIntro {
 	width:100%;
 	position:relative;
-	
+	height:100px;
 	background: url(../img/bg2.jpg) no-repeat top center;
 }
 
