--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
     background-color: #fff;
 }
 
+.votingButton {
+    cursor: pointer;
+    padding-left: 4px;
+}
+
 html {
     width: 100%;
     height: 100%;
