--- a/templates/404.html
+++ b/templates/404.html
@@ -20,7 +20,7 @@
          i++;
       }},intervalo);
 };
-var texto = "No se que es lo que estes buscando pero no debiste entrar por estos lugares, vete y no regreses";
+var texto = "404 Pagina no encontrada";
 
 maquina("texto",texto,100);
 
